vlib/v/checker/tests/modify_const_with_ref.out
vlib/v/checker/tests/modify_const_with_ref.vv:11:11: error: `constant` is immutable, cannot have a mutable reference to it
    9 |     mut unused_var := Foo{}
   10 |     unused_var = Foo{}
   11 |     mut c := &constant
      |              ^
   12 |     c.value = 200
   13 | }
